# token-price-agg

./: .env.example  .gitignore  AGENTS.md  LOGO_URL.md  README.md  RUNBOOK.md  SPEC.md  mkdocs.yml  pyproject.toml  vercel.json
config/: app.toml
data/: token_metadata.sqlite3
deploy/k8s/: deployment.yaml
deploy/monitoring/alerts/: token_price_agg.rules.yml
deploy/monitoring/dashboards/: .token_price_agg_overview.json.swp  token_price_agg_overview.json
deploy/prometheus/: .prometheus.yml.swp  prometheus.yml
deploy/systemd/: token-price-agg.service
docs/src/: api.md  index.md  operations.md  providers.md
token_price_agg/api/routes/: aggregate_utils.py  health.py  metrics.py  prices.py  providers.py  quotes.py  ready.py
token_price_agg/api/schemas/: query_params.py  requests.py  responses.py
token_price_agg/app/: config.py  dependencies.py  main.py
token_price_agg/core/: address_remap.py  aggregator.py  errors.py  models.py  normalizer.py  provider_runner.py  selection.py  validator.py
token_price_agg/observability/: logging.py  metrics.py
token_price_agg/providers/: base.py  common.py  curve.py  defillama.py  enso.py  http_helpers.py  lifi.py  odos.py  parsing.py  registry.py  utils.py
token_price_agg/providers/clients/: http.py
token_price_agg/security/: __init__.py  anon_limiter.py  models.py  store.py
token_price_agg/tests/: conftest.py
token_price_agg/token_metadata/: __init__.py  cache.py  logo_sources.py  logo_urls.py  logo_verifier.py  onchain.py  policy.py  resolver.py
token_price_agg/tools/: api_key.py  refresh_logo_sources.py  verify_logo.py
token_price_agg/vault/: resolver.py
token_price_agg/web3/: client.py
(+37 files in other folders)
